# kern_segmentation

./: .gitignore  README.md  pyproject.toml
kern_segmentation/examples/: FCNN_IoU.ipynb  FCNN_MSE.ipynb  FCNN_without_sobel.ipynb  Model_engineering.ipynb
kern_segmentation/scripts/examples/: augment_data.py  prepare_data.py
kern_segmentation/src/ai_models/notebooks/: True_FCNN.ipynb
kern_segmentation/src/preprocessing/: Augmentator.py  Preparer.py
kern_segmentation/src/utils/: Cutter.py  __init__.py
notebooks/: Augmentation.ipynb  Filtration.ipynb  cluster_data.ipynb  edge_detection.ipynb  prepare_data.ipynb  tiff_to_npy.ipynb
src/: Augmentator.py  Preparer.py  test.ipynb
src/utils/: Cutter.py  Smoother.py  __init__.py
