[tool.poetry]
name = "cernclassifier"
version = "0.1.0"
description = ""
authors = ["Chopo Trave <Skader-kot@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
cv = "^1.0.0"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"
seaborn = "^0.13.2"
pillow = "^10.2.0"
jupyter = "^1.0.0"
patchify = "^0.2.3"
scikit-learn = "^1.4.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

